@@ -14,7 +14,7 @@
 0.96774193548387096774193548387096774194
 0
 3
-0
+1
 [0, 3]~
 * [1, 4]
 6
@@ -140,7 +140,7 @@ error("forbidden division t_INT \\ t_INTMOD.")
 0.77500000000000000000000000000000000000
 0
 3.1000000000000000000000000000000000000
-0
+1
 [0, 3.1000000000000000000000000000000000000]~
 * [3, 3]
 1.0000000000000000000000000000000000000
@@ -798,7 +798,7 @@ error("forbidden division t_SER \\ t_INT.")
 6774194]
 [0, 0]
 [2, 3]
-[0, 0]
+[1, 1]
 * [2, 4]
 [4, 6]
 [4, 6]
@@ -853,7 +853,7 @@ Mat(1)
 Mat(0.64516129032258064516129032258064516129)
 Mat(0)
 Mat(2)
-Mat(0)
+Mat(1)
 * [3, 4]
 Mat(4)
 Mat(4)
